hover for login

--- a/src/lib/components/public/login/loginPanel.less
+++ b/src/lib/components/public/login/loginPanel.less
@@ -1,7 +1,7 @@
 @img: '/assets';
 .center{position: absolute;  left: 0; right: 0; top: 0; bottom: 0;}
-.panel{ .center; top: 84px; z-index: 10; background: #f7f8fa; }
-
+.panel{ .center; top: 65px; z-index: 10; background: #f7f8fa; visibility: hidden; opacity: 0;}
+.panelFade{ transition: 2s cubic-bezier(0.195, 0.545, 0.275, 0.845); visibility: visible; opacity: 1;}
 .hide{display: none;}
 
 .ico{position: absolute; top: 10px; left: 10px; width: 15px; height: 15px; border-radius: 50%; background: #eb7474; border: 1px solid #f78181;}
