--- a/src/lib/components/public/header/header.less
+++ b/src/lib/components/public/header/header.less
@@ -2,27 +2,30 @@
 
 .hide{display: none;}
 
+.header{
+	background:#fafafa;
+	padding: 12px 0 12px;
+	width: 100%;
+	height: 40px;
+	top: 0;
+	z-index: 999;
+	box-shadow: 0 1px 0 rgba(0,0,0,.1);
+}
 .userInfo{ float: right; margin-top: -40px; cursor: pointer;
 	img{height: 40px; border-radius: 50%; overflow: hidden;}
 	span{float: right; margin-left: 10px; line-height: 40px;}
 }
 
-.btn{width: 80px; height: 40px; margin: auto; background: linear-gradient(#0096ff,#005dff); border-radius: 4px; text-align: center;line-height: 40px; color: #fff;}
+.btn{width: 80px; height: 40px; margin: auto; background: #fd0202; border-radius: 20px; text-align: center;line-height: 40px; color: #fff; box-sizing: border-box; border: 1px solid #f01a1a;}
 
-.share_btn{  box-shadow: 0 0 1px rgba(0, 0, 0, .5); cursor: pointer; -webkit-user-select: none;}
+.share_btn{ cursor: pointer; -webkit-user-select: none; }
 
-.loginPanel{position: absolute; right: 30px; top: 22px;}
+.loginPanel{position: absolute; right: 60px; top: 12px;}
 
-.login{ display: inline-block; margin-right: 10px; background: linear-gradient(#5c5c5c,#252525); -webkit-user-select: none; cursor: default;}
-
-.header{
-	background:#fafafa;
-	padding: 1.5em 0 1.2em;
-	/* border-bottom: 1px solid #c2bfbf; */
-	/* position: fixed; */
-	width: 100%;
-	height: 40px;
-	top: 0;
-	z-index: 999;
-	box-shadow: 0 1px 1px rgba(0,0,0,.15);
+.login{ display: inline-block; margin-right: 20px; color:rgb(95, 93, 96); -webkit-user-select: none; cursor: default; cursor: pointer; transition: color .5s; height: 40px; line-height: 40px;
+	&:hover{color: #fd0202; }
 }
+
+.progress{ position: absolute; height: 3px; width: 100%; top: 64px; left: -100%; background: #fd0202; transition: left 0.4s; box-shadow: 0 1px 3px rgba(219, 172, 172, 1); z-index: 1000;}
+.progressIn{left:0;transition: left 2s cubic-bezier(0.195, 0.545, 0.275, 0.845);}
+.progressDone{transition: none;}
