--- a/src/lib/components/public/login/loginPanel.less
+++ b/src/lib/components/public/login/loginPanel.less
@@ -1,7 +1,7 @@
 @img: '/assets';
 .center{position: absolute;  left: 0; right: 0; top: 0; bottom: 0;}
-.panel{ .center; top: 65px; z-index: 10; background: #f7f8fa; visibility: hidden; opacity: 0;}
-.panelFade{ transition: 2s cubic-bezier(0.195, 0.545, 0.275, 0.845); visibility: visible; opacity: 1;}
+.panel{ .center; top: 65px; z-index: 10; background: #f7f8fa; visibility: hidden; opacity: 0; transition: .4s;}
+.panelFade{ transition: .6s cubic-bezier(0.195, 0.545, 0.275, 0.845); visibility: visible; opacity: 1;}
 .hide{display: none;}
 
 .ico{position: absolute; top: 10px; left: 10px; width: 15px; height: 15px; border-radius: 50%; background: #eb7474; border: 1px solid #f78181;}
@@ -59,11 +59,12 @@
   -o-transition: 0.5s all;
 }
 .john_img h2 {
-    font-size: 1.7em;
+    font-size: 1.1em;
     color: #883485;
     margin-top: 0.2em;
-    font-weight: 400;
-    text-align: center;
+    font-weight: 900;
+    line-height: 1.4;
+    text-align: left; text-indent: 2em;
 }
 .johndoe_left input[type="password"] {
     font-size: 1em;
