--- a/src/lib/components/public/addSharing/panel.less
+++ b/src/lib/components/public/addSharing/panel.less
@@ -62,3 +62,18 @@
 
 .imgWrap{ position: relative; }
 .imgHint{ height: 180px; margin: 5px; border: 3px dashed #d9d5d5; box-sizing: border-box; text-align: center; line-height: 180px; color: #d9d5d5; border-radius: 10px;}
+
+.rateBar{ cursor: default;
+	padding: 6px 18px; line-height: 28px; box-sizing: border-box; font-size: 14px; color:#9f9f9f; font-weight: bold; user-select: none;
+	i{font-family: icomoon; font-size: 22px;}
+}
+
+.rate{float: left; color: inherit;
+	>*{margin-right: 4px;}
+	i{color: #fd0202;}
+}
+.author{float: right; cursor: pointer; font-size: 14px; color: inherit;
+	>*{margin-left: 4px;}
+	i{font-size: 16px; color:#454545;}
+	&:hover i{color: #fd0202;}
+}
