--- a/src/lib/components/public/item/item.less
+++ b/src/lib/components/public/item/item.less
@@ -8,10 +8,23 @@
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	/* display: none; */
-	cursor: pointer;
 	border-radius: 0.2em;
 	img{display:block;width:100%; height: auto; border-top-left-radius:0.2em;border-top-right-radius:0.2em; }
 	&.inactive{visibility: hidden; opacity: 0;}
 	&:hover img{ opacity: .8;}
+	i{font-family: icomoon; font-size: 14px;}
+}
+.rateBar{ cursor: default;
+	padding: 6px 18px; line-height: 28px; box-sizing: border-box; font-size: 14px; color:#9f9f9f; font-weight: bold; user-select: none;
+	i{font-family: icomoon; font-size: 22px;}
+}
 
+.rate{float: left; position: relative; color: inherit;
+	>*{margin-right: 4px;}
+	i{color: #fd0202;}
+}
+.author{float: right; cursor: pointer; font-size: 14px; color: inherit;
+	>*{margin-left: 4px;}
+	i{font-size: 16px; color:#454545;}
+	&:hover i{color: #fd0202;}
 }
