--- a/src/static/style/main.css
+++ b/src/static/style/main.css
@@ -26,6 +26,8 @@ textarea{margin:0; padding:0; resize:none; overflow:auto; outline:none;}
   font-style: normal;
 }
 
+.f-bubbleHint{position: absolute; top: -88%; left: -30px; font-size: 10px; padding: 0 5px; border-radius: 4px; background: #fc8282; box-shadow: 0 0 4px rgba(255, 127, 110, 0.49); text-align: center; color: #fff; font-weight: normal; white-space:nowrap;}
+
 .icon-user:before {
   content: "\e900";
 }
