--- a/src/lib/components/public/addSharing/panel.less
+++ b/src/lib/components/public/addSharing/panel.less
@@ -60,7 +60,7 @@
     }
 }
 
-.imgWrap{ position: relative; }
+.imgWrap{ position: relative; max-height: 350px; overflow: hidden;}
 .imgHint{ height: 180px; margin: 5px; border: 3px dashed #d9d5d5; box-sizing: border-box; text-align: center; line-height: 180px; color: #d9d5d5; border-radius: 10px;}
 
 .rateBar{ cursor: default;
