--- a/src/static/style/main.css
+++ b/src/static/style/main.css
@@ -10,6 +10,8 @@ th,td{padding:0;}
 input{margin:0; padding:0;}
 textarea{margin:0; padding:0; resize:none; overflow:auto; outline:none;}
 
+body,html{height: 100%; overflow: hidden;}
+
 .f-clear:after{content:"";display:block;clear:both;}
 .f-clear{*zoom:1}
 
@@ -17,18 +19,25 @@ textarea{margin:0; padding:0; resize:none; overflow:auto; outline:none;}
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('/public/assets/icomoon.eot?mwc2os');
-  src:  url('/public/assets/icomoon.eot?mwc2os#iefix') format('embedded-opentype'),
-    url('/public/assets/icomoon.ttf?mwc2os') format('truetype'),
-    url('/public/assets/icomoon.woff?mwc2os') format('woff'),
-    url('/public/assets/icomoon.svg?mwc2os#icomoon') format('svg');
+  src:  url('/public/assets/icomoon.eot?ekdlp2');
+  src:  url('/public/assets/icomoon.eot?ekdlp2#iefix') format('embedded-opentype'),
+    url('/public/assets/icomoon.ttf?ekdlp2') format('truetype'),
+    url('/public/assets/icomoon.woff?ekdlp2') format('woff'),
+    url('/public/assets/icomoon.svg?ekdlp2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
+@keyframes rotate{
+    from{transform: rotate(0);}
+    to{transform: rotate(1turn);}
+}
+i.f-refreshing{
+    animation: rotate 2s linear infinite;
+}
 .f-bubbleHint{position: absolute; top: -88%; left: -30px; font-size: 10px; padding: 0 5px; border-radius: 4px; background: #fc8282; box-shadow: 0 0 4px rgba(255, 127, 110, 0.49); text-align: center; color: #fff; font-weight: normal; white-space:nowrap;}
 
-.icon-user:before {
+.icon-用户:before {
   content: "\e900";
 }
 .icon-heart1:before {
@@ -45,6 +54,12 @@ textarea{margin:0; padding:0; resize:none; overflow:auto; outline:none;}
 }
 .icon-cross:before {
   content: "\e117";
+}
+.icon-location:before {
+  content: "\e947";
+}
+.icon-loop2:before {
+  content: "\ea2e";
 }
 /**
  * Progress bar for imagesLoaded
