--- a/src/component/content/content.less
+++ b/src/component/content/content.less
@@ -1,5 +1,5 @@
 @img: '/public/assets';
-.contentBox{
+.contentBox{ min-height: 200px;
 	position: relative; margin-top: 58px;  background: #fff; transition: 1s cubic-bezier(0.250, 0.100, 0.250, 1.000);
 	ul{position: relative;}
 	.layoutWrap{ margin:auto; width: 80%; padding-top: 40px;}
