--- a/src/component/shareingPanel/shareingPanel.less
+++ b/src/component/shareingPanel/shareingPanel.less
@@ -1,17 +1,23 @@
 
 @img: '/public/assets';
+/* function */
 .hide{display: none;}
-
+.bubbleHint.ipt{ top: -30px; left: 35%; padding: 5px 10px; }
+.subForm .warning{border: 1px solid #fd0202; box-shadow: 0 0 3px rgba(252, 3, 3, 0.46); transition: .5s;}
+/* end function */
 .fadeHide{
     visibility: hidden; /* 防止可点击 */
     opacity: 0; /* 对屏幕阅读器支持不好 */
     position: absolute;
 }
 
-.panelWrap{position: fixed; top: 58px; left: 0; right: 0; bottom: 0; z-index: 9999;
+.panelWrap{position: fixed; top: 58px; left: 0; right: 0; bottom: 0; z-index: 9998;
     .mask{width: 100%; height: 100%; background: rgba(0,0,0,.6);}
 }
-.sharePanel{position: absolute; left:35%; top: 30px; width: 40%; padding-bottom: 20px; background: #fff; z-index: 3; border-radius: 8px;
+.eltWrap{
+    position: absolute; left: 14%; top: 30px; right: 0;
+}
+.sharePanel{float: left; padding-bottom: 20px; width: 40%; background: #fff; z-index: 3; border-radius: 8px;
     *{box-sizing: border-box;}
 }
 .type{
@@ -29,7 +35,7 @@
     >*{outline:none; padding:13px 10px; background:#f3f3f3; border:1px solid #ccc; font-size:14px; color:#999; width:90%; box-shadow: 0 0 1px rgba(0,0,0,.1); margin-top: 10px; border-radius: 4px; display: inline-block; cursor: default;}
     p{-webkit-user-select: none; cursor: default; }
     button[type='submit']{
-        text-align: center; background: #3ea751; color: #fff;
+        position: relative; text-align: center; background: #3ea751; color: #fff;
     }
     input[type='file']{
         visibility: visible;
@@ -43,7 +49,7 @@
 
 /* tile preview */
 
-.tilePreview{ position: absolute; top: 30px; left: 10%;
+.tilePreview{ float: left; margin-right: 50px;
     width: 260px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.1); background-color: #ffffff; border: 1px solid #dedede; border-radius: 0.2em;
     img{ width: 100%; height: auto;border-top-left-radius: 0.2em; border-top-right-radius: 0.2em;}
 }
@@ -77,4 +83,11 @@
                 i{color: #fd0202; }
             }
         }
+}
+
+
+@media screen and (max-width:730px) {
+    .eltWrap{left: 0;}
+    .tilePreview{display: none;}
+    .sharePanel{position: absolute; width: 80%; left: 0; right: 0; float: none; margin: auto;}
 }
