--- a/src/component/userList/userList.less
+++ b/src/component/userList/userList.less
@@ -1,5 +1,5 @@
 .panel{
-    position: fixed; height: 100%; z-index: 9999; width: 0;
+    position: fixed; height: 100%; z-index: 99999; width: 0;
     i{font-family: 'icomoon'; font-size: 20px;}
 }
 
@@ -33,14 +33,14 @@ i.refresh{ position: absolute; right: 20px; top: 0px; padding: 20px; color: #808
     position: fixed; top: 0; right: 100%; bottom: 0; width: 300px; overflow: auto; padding-top: 80px; border-right: 1px solid #e3e3e3; background: #fff; transform-style: flat;
     ul{overflow: auto; height: 100%;}
     li{
-        position: relative; height: 40px; line-height: 40px; font-weight: bold; margin-bottom: 10px;
+        position: relative; height: 40px; line-height: 40px; margin-bottom: 10px;
         text-indent: 28px;
 
         &:hover{border-left: 10px solid #fd0202; cursor: pointer; transition: .15s;}
         a{display: block; height: 100%;}
-        img{height: 100%; margin-right: 10px;}
+        img{height: 100%; margin-right: 10px; vertical-align: middle;}
 
-        i{font-family: 'icomoon'; margin-left: 4px; font-size: 20px; line-height: 40px; color:#fd0202;}
+        i{font-family: 'icomoon'; margin-left: 4px; font-size: 20px; line-height: 40px; color:#fd0202; font-weight: bold;}
     }
     .starWrap{position: absolute; right: 30px; color: #9d9f9d;}
     .starNum{font-size: 20px; line-height: 20px;}
