--- a/src/component/userList/userList.less
+++ b/src/component/userList/userList.less
@@ -22,7 +22,11 @@
 /* end of menu */
 
 
-i.refresh{ position: absolute; right: 20px; top: 0px; padding: 20px; color: #808080; cursor: pointer;}
+.home{ position: absolute; right: 20px; top: 0px; padding: 20px; color: #808080; cursor: pointer; color: #333;
+    i{font-size: 20px;}
+}
+
+
 
 .mask{ position: fixed; left: 0; right: 0; top: 0; bottom: 0; background: #fff; opacity: 0; transition: .4s ease-out; visibility: hidden;}
 .panel.panelShow{width: 100%;}
@@ -44,4 +48,5 @@ i.refresh{ position: absolute; right: 20px; top: 0px; padding: 20px; color: #808
     }
     .starWrap{position: absolute; right: 30px; color: #9d9f9d;}
     .starNum{font-size: 20px; line-height: 20px;}
+    h3.listTitle{ font-size: 18px; color:#606060; line-height: 30px; text-indent: 28px; margin-bottom: 20px;}
 }
