--- a/src/static/style/gen.css
+++ b/src/static/style/gen.css
@@ -54,11 +54,11 @@ i.f-refreshing{
 i{font-family: 'icomoon';}
 @font-face {
   font-family: 'icomoon';
-  src:  url('/public/assets/icomoon.eot?ekdlp2');
-  src:  url('/public/assets/icomoon.eot?ekdlp2#iefix') format('embedded-opentype'),
-    url('/public/assets/icomoon.ttf?ekdlp2') format('truetype'),
-    url('/public/assets/icomoon.woff?ekdlp2') format('woff'),
-    url('/public/assets/icomoon.svg?ekdlp2#icomoon') format('svg');
+  src:  url('/public/assets/icomoon.eot?687xqw');
+  src:  url('/public/assets/icomoon.eot?687xqw#iefix') format('embedded-opentype'),
+    url('/public/assets/icomoon.ttf?687xqw') format('truetype'),
+    url('/public/assets/icomoon.woff?687xqw') format('woff'),
+    url('/public/assets/icomoon.svg?687xqw#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -85,6 +85,16 @@ i{font-family: 'icomoon';}
 }
 .icon-loop2:before {
   content: "\ea2e";
+}
+.icon-home:before {
+  content: "\e904";
+}
+
+.icon-arrow-down2:before {
+  content: "\ea3e";
+}
+.icon-arrow-up2:before {
+  content: "\ea3a";
 }
 /* end of fontface */
 
