--- a/src/component/header/header.less
+++ b/src/component/header/header.less
@@ -9,7 +9,11 @@
 	>*{float: left;}
 	.userIcon{font-size: 20px;}
 }
+.home{ position: absolute; left: 80px; top: 0px; padding: 18px; color: #808080; cursor: pointer; color: #333;
 
+    i{font-size: 20px; transition: .6s;}
+	&:hover i{color: #fd0202;}
+}
 
 /* userInfo */
 .userInfo{ position: relative; margin-top: 9px; cursor: pointer;
