--- a/src/component/userEntry/userEntry.less
+++ b/src/component/userEntry/userEntry.less
@@ -64,6 +64,7 @@
         border: 1px solid #ccc;
         outline: none;
         border-radius: 4px;
+        margin-top: 10px;
         font-family: 'Roboto Condensed', sans-serif;
     }
     input[type="submit"] {
@@ -93,3 +94,8 @@
 
 }
 .close{position: absolute; top: 10px; left: 10px; width: 15px; height: 15px; border-radius: 50%; background: #eb7474; border: 1px solid #f78181;}
+.warning{border: 1px solid #fd0202 !important; box-shadow: 0 0 3px rgba(252, 3, 3, 0.46); transition: .5s; color: #fd0202 !important;
+    &::-webkit-input-placeholder{color:#fd0202}
+    &::-moz-placeholder{color:#fd0202}
+    &::-ms-input-placeholder{color:#fd0202}
+}
