--- a/src/component/item/item.less
+++ b/src/component/item/item.less
@@ -31,3 +31,7 @@
             }
         }
 }
+.hide{display: none;}
+.imgWrap{transition:.8s; height: auto;}
+.editIcon{ position: absolute; width: 20px; height: 20px; left: -10px; top: -10px; font-size: 9px; border-radius: 50%; color:#656565; background: #d1d9da; line-height: 20px; text-align: center;}
+.editHeight{ height: 100px; overflow: hidden;}
