fix out edit tile

--- a/src/component/header/header.less
+++ b/src/component/header/header.less
@@ -81,3 +81,10 @@
 }
 
 :global .bubbleAnima{animation: globalBubble 3s ;  }
+@media screen and (max-width:630px) {
+    .userInfo{
+		span{display: none;}
+	}
+	.home{left: 58px;}
+	.bubleFrame{width: 80px;}
+}
