--- a/src/component/content/content.less
+++ b/src/component/content/content.less
@@ -31,15 +31,15 @@
 }
 
 .spreadMenu{ position: fixed; top: 230px; right: 30px; width: 30px; height: 30px; border-radius: 50%; background: #fd0202;
-	transition: right 1s;
-	i{display: block; width: 100%; height: 100%; text-align: center; font-size: 18px; line-height: 30px; color: #fff;
+	transition: right 1s; text-align: center; line-height: 30px; color: #fff; user-select: none;
+	i{display: block; width: 100%; height: 100%;  font-size: 18px;
 		transform: rotate(45deg); transition: transform 1s;
 	}
 	i.spreadRotate{ transform: rotate(0);}
 }
-
+.outEdit{top: 70px; font-size: 12px; padding: 0 10px; cursor: default; border-radius: 15px;}
 .MenuSpreaded{ right: 265px; }
-
+.outSpreaded{right: 255px;}
 
 /* 通用样式 */
 .notLogin{margin-top: 160+58px;}
