--- a/src/component/userList/userList.less
+++ b/src/component/userList/userList.less
@@ -37,12 +37,15 @@
     position: fixed; top: 0; right: 100%; bottom: 0; width: 300px; overflow: auto; padding-top: 80px; border-right: 1px solid #e3e3e3; background: #fff; transform-style: flat;
     ul{overflow: auto; height: 100%;}
     li{
-        position: relative; height: 40px; line-height: 40px; margin-bottom: 10px;
-        text-indent: 28px;
+        position: relative; height: 40px; line-height: 40px; margin-bottom: 10px; box-sizing: border-box;
+        padding-left: 28px;
 
         &:hover{border-left: 10px solid #fd0202; cursor: pointer; transition: .15s;}
-        a{display: block; height: 100%;}
-        img{height: 100%; margin-right: 10px; vertical-align: middle;}
+        a{
+            display: block; height: 100%;
+            .imgWrap{ display: inline-block; width: 40px; height: 40px; text-align: center;  margin-right: 10px; overflow: hidden; border-radius: 50%;}
+        }
+        img{height: 100%; width: auto; vertical-align: middle;}
 
         i{font-family: 'icomoon'; margin-left: 4px; font-size: 20px; line-height: 40px; color:#fd0202; font-weight: bold;}
     }
