by normal, you should restore to this

--- a/src/component/header/header.less
+++ b/src/component/header/header.less
@@ -65,7 +65,7 @@
 /* end of userInfo */
 
 
-.progress{ position: absolute; z-index: 9999; height: 3px; width: 100%; top: 100%; left: -100%; background: #fd0202; transition: left 0.4s; box-shadow: 0 1px 3px rgba(219, 172, 172, 1);}
+.progress{ position: absolute; z-index: 9999; height: 3px; width: 100%; top: 100%; left: -100%; background: #fd0202; transition: left 0.4s; box-shadow: 0 0 10px rgba(253, 2, 2, 0.76);}
 .progressIn{left:0;transition: left 2s cubic-bezier(0.195, 0.545, 0.275, 0.845);}
 .progressDone{transition: none;}
 .progressLoading{ left:-30%; transition: left 1.5s cubic-bezier(0.195, 0.545, 0.275, 0.845); }
